Fix styles - dark mode and hover

--- a/src/assets/styles/_basic.scss
+++ b/src/assets/styles/_basic.scss
@@ -8,6 +8,7 @@
   border: 1px solid var(--main-color);
   border-radius: 0.3rem;
   font-size: 0.7rem;
+  color: var(--main-color);
   background-color: transparent;
   -webkit-appearance: none;
 }
