--- a/src/assets/styles/_cart-panel.scss
+++ b/src/assets/styles/_cart-panel.scss
@@ -25,10 +25,7 @@
         height: 6.25rem;
         background-size: cover;
         background-position: center;
-
-        >img {
-          border-radius: 0.4rem;
-        }
+        border-radius: 0.4rem;
       }
 
       .product-details {
